2001-09-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ftpd.tcl: Restricted export list to public API.
	  [456255]. Patch by Hemang Lavana
	  <hemanglavana@users.sourceforge.net>

2001-06-21  Andreas Kupries <andreas_kupries@users.sourceforge.net>

	* ftpd.tcl: Fixed dubious code reported by frink.

2000-11-22  Eric Melski  <ericm@interwoven.com>

	* Integrated patch from Mark O'Conner.  Patch fixed file translation
	mode bug (ie, binary vs. ascii) that prevented proper retrieval
	of binary files.  [SFBUG: 122664]

2000-11-01  Dan Kuchler  <kuchler@ajubasolutions.com>

	* Integrated patch from Keith Vetter <keith@softbook.com>
	Patch fixed several bugs.  Allowed users to log in as
	both 'anonymous' and 'ftp' by default instead of just anonymous.
	Fixed syntax error with the 'socket -server' line in ftpd::server when
	'myaddr' is specified.  Fixed the argument specifications for
	cmdline:getoptions in ftpd::config so that arguments are required for
	the -logCmd and the -fsCmd.

2000-10-30  Dan Kuchler  <kuchler@ajubasolutions.com>

	* Made some fixes to better support windows.

2000-10-27  Dan Kuchler  <kuchler@ajubasolutions.com>

	* Initial revision of tcllib ftpd.  Based off of the ftpd in
	the stdtcl distribution.
