@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: ftpd.tcl,v 1.10 2001/09/05 23:53:52 andreas_kupries Exp $
+# RCS: @(#) $Id: ftpd.tcl,v 1.11 2001/09/07 22:21:51 andreas_kupries Exp $
 #
 
 # Define the ftpd package version 1.1.1
@@ -105,7 +105,6 @@ namespace eval ::ftpd {
 
     namespace export config hasCallback logStderr 
     namespace export fileAuth anonAuth unixAuth server accept read
-    namespace export fsFile::docRoot fsFile::fs
 }
 
 # ::ftpd::config --
@@ -655,7 +654,7 @@ proc ::ftpd::Fs {command path args} {
 # ftp commands with the same name as the procs.
 
 namespace eval ::ftpd::command {
-    namespace export *
+    # All commands in this namespace are private, no export.
 }
 
 # ::ftpd::command::ABOR --
@@ -1624,7 +1623,7 @@ namespace eval ::ftpd::fsFile {
 	set docRoot /
     }
 
-    namespace export *
+    namespace export docRoot fs
 }
 
 # ::ftpd::fsFile::docRoot --
